Added MafOLCLMerge tab which hopefully should help with merging MAF curves and fitting. Cleaned up code that went nowhere, revisited some startup scripts